Agregando compilacion automatica del primer test

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,7 @@ AR=ar
 LD=ld
 
 STAGEDIR=lib
+BINDIR=bin
 
 MODEL=model
 FIELD=field
@@ -15,7 +16,7 @@ SHLDFLAGS=-lc
 STCORE=libcore
 STLDFLAGS=-lc -lm
 
-all: staging library shared static sweep
+all: staging library shared static sweep binaries
 
 staging:
 	mkdir -p $(STAGEDIR)
@@ -44,9 +45,15 @@ static:
 sweep:
 	rm -f $(STAGEDIR)/*.o
 
+binaries:
+	mkdir -p $(BINDIR) 
+	make -C testing
+
 clean:
 	make -C util clean
 	make -C model clean
 	make -C field clean
+	make -C testing clean
 	rm -rf $(STAGEDIR)
+	rm -rf $(BINDIR)
 
